<resources>
    <string name="app_name">Boscloner</string>
    <string name="action_settings">Settings</string>
    <string name="channel_name">boscloner</string>
    <string name="channel_description">boscloner notification channel</string>
    <string name="permission_retry_message">Boscloner needs location permission in order to continue</string>
    <string name="permission_request_rationale">In order to scan bluetooth devices around your phone, we need location permission</string>
    <string name="input">Write Custom Badge</string>
    <string name="delete_history">Delete History</string>
    <string name="input_content">Enter Custom Badge ID\n (Format: 1A:2B:3C:4D:5E)</string>
    <string name="delete_history_dialog_content">Are you sure you want to delete all entries from the history file?</string>
    <string name="input_hint">"1A:2B:3C:4D:5D"</string>
    <string name="input_prefill"></string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="custom_write">Custom Write</string>
    <string name="auto_clone">AutoClone</string>
    <string name="settings_autoclone">AUTOCLONE DEFAULTS</string>
    <string name="settings_autoclone_status">Enabled</string>
    <string name="boscloner_settings">BOSCLONER SETTINGS</string>
    <string name="rfid_badge_type">RFID Badge Type</string>
    <string name="rfid_badge_type_default">HID ProxCard</string>
    <string name="boscloner_toolbar_title">Boscloner</string>
    <string name="boscloner_toolbar_decsription">All-In-One RFID Cloning Toolkit</string>
    <string name="share_button_label_history_fragment">Share</string>
    <string name="delete_button_label_history_fragment">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="no_app_that_can_share">There is no app that can share text on your phone.</string>
    <string name="nothing_to_share">Nothing to share.</string>
    <string name="history_input">Write from history</string>
    <string name="history_input_content">Are you sure you want to write this from history?</string>
    <string name="boscloner_unavailable">Boscloner Unavailable</string>
    <string name="disconnected_message">Ensure the Boscloner boards are powered on and within range.</string>

    <string-array name="RFID">
        <item>HID ProxCard</item>
        <item>HID Indala</item>
    </string-array>
</resources>
